k8s-deployments/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  # deployment name
  name: golang-service
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '1234'
  labels:
    app: goservice
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goservice
      version: v1
  template:
    metadata:
      labels:
        app: goservice
        version: v1
    spec:
      containers:
      - name: goservice
        image: k3d-registry.localhost:5000/fullstack-practice:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1234
