k8s-deployments/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goservice
  annotations:
    prometheus.io/scrape: 'true'
spec:
  # type: ClusterIP, NodePort, LoadBalancer, ExternalName
  selector:
    app: goservice
  ports:
  - name: prometheus
    protocol: TCP
    port: 9102
    targetPort: 1234
  - name: http
    protocol: TCP
    port: 8888
    # pod's port
    targetPort: 1234
