k8s-deployments/demo/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: goservice-vs
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        port:
          number: 8888
        host: "goservice"
